Font weights and content updated

--- a/locales/si.json
+++ b/locales/si.json
@@ -70,7 +70,9 @@
   "footerEmailUs": "Pišite nam",
   "footerFindUs": "Najdite nas",
 
-  "formTitle": "Pošljite nam sporočilo",
+  "formTitle": "Povežite se z nami za digitalno odličnost",
+  "formDescription": "Ste pripravljeni preoblikovati vašo digitalno vizijo v resničnost? Naša ekipa je specializirana za ustvarjanje izjemnih digitalnih izkušenj, od privlačnih spletnih strani do inovativnih marketinških strategij. Oglasite se preko obrazca in pogovorimo se, kako vam lahko pomagamo, da vaš projekt zasije. Vaše digitalno potovanje se začne tukaj!",
+
   "formFullNamePlaceholder": "Polno ime",
   "formEmailPlaceholder": "E-pošta",
   "formMessagePlaceholder": "Sporočilo",
