--- a/locales/en.json
+++ b/locales/en.json
@@ -70,7 +70,9 @@
   "footerEmailUs": "Email us",
   "footerFindUs": "Find us",
 
-  "formTitle": "Write us a message",
+  "formTitle": "Connect with Us for Digital Excellence",
+  "formDescription": "Ready to transform your digital vision into reality? Our team specializes in creating outstanding digital experiences, from engaging websites to innovative marketing strategies. Reach out through the form and let's discuss how we can help your project shine. Your digital journey starts here!",
+
   "formFullNamePlaceholder": "Please enter your full name",
   "formEmailPlaceholder": "Please enter your email address",
   "formMessagePlaceholder": "Write us a message",
